Bug 373927 - Layoutgenerator does not work with KF5 builds
Summary: Layoutgenerator does not work with KF5 builds
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks: 373932
  Show dependency treegraph
 
Reported: 2016-12-19 23:25 UTC by Ralf Habacker
Modified: 2016-12-21 13:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.21.1 (KDE Applications 16.12.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-12-19 23:25:49 UTC
Umbrello's layout generator does not work with KF5 builds. The layout definition iles could not be found.
Comment 1 Ralf Habacker 2016-12-21 13:14:55 UTC
Git commit f7ec0b285edf846a8fd3adb45d766d9222524fbc by Ralf Habacker.
Committed on 21/12/2016 at 13:14.
Pushed by habacker into branch 'Applications/16.12'.

Fix 'Layoutgenerator does not work with KF5 builds'.

The former port to Qt5 did not cover the wildcard filter usage.
FIXED-IN:2.21.1 (KDE Applications 16.12.1)

M  +8    -1    umbrello/layoutgenerator.cpp

https://commits.kde.org/umbrello/f7ec0b285edf846a8fd3adb45d766d9222524fbc