Fix 'Layoutgenerator does not work with KF5 builds'.

The former port to Qt5 did not cover the wildcard filter usage.

BUG:373927
FIXED-IN:2.21.1 (KDE Applications 16.12.1)